# spec-kit-pro

./: CHANGELOG.md  README.md  pyproject.toml
memory/: constitution.md
src/specify_cli/: __init__.py
templates/: components-template.md  ia-template.md  spec-template.md  tasks-ux-template.md  userflows-template.md  wireframes-template.md
templates/commands/: components.md  ia.md  plan.md  specify.md  tasks-ux.md  tasks.md  userflows.md  wireframes.md
