[project]
name = "spec-kit-pro"
version = "1.0.0"
description = "Spec Kit Pro - Spec-Driven Development toolkit with full UI/UX support for complex apps and mobile development."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify-pro = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

